# Tournament-Ops-Intelligence

./: README.md  pyproject.toml
data/: sample_event.json
src/tournament_ops_intelligence/: __init__.py  analytics.py  cli.py  models.py  reports.py  repository.py  scheduler.py  simulator.py
tests/: test_analytics.py  test_repository.py  test_scheduler.py
